--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@
 
 apply from: rootProject.file('dependencies.gradle')
 
-subprojects { Project subproject ->
+subprojects { subproject ->
     buildscript {
         repositories {
             jcenter()
@@ -35,7 +35,7 @@ subprojects { Project subproject ->
     }
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.2.1'
+wrapper {
+    gradleVersion = '6.5.0'
 }
 
