--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -13,7 +13,7 @@ ext {
     dependency = [
             // Gradle plugins
             spoonGradlePlugin          : 'com.stanfy.spoon:spoon-gradle-plugin:1.0.4',
-            androidGradlePlugin        : 'com.android.tools.build:gradle:3.0.0',
+            androidGradlePlugin        : 'com.android.tools.build:gradle:4.2.0-beta06',
 
             // Mopub
             mopub                      : 'com.mopub:mopub-sdk-native-static:4.11.0@aar',
